Navbar Fixed Top

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <meta name="description" content="形随意动是求真, 务实的新纪元青少年编程团队. 形随意动致力于以符合时代的方法传递出领先于时代的精神. 形随意动是一个以云服务为核心的青少年编程兴趣组织, 专注于开源编程. 我们希望以以符合时代的方法传递出领先于时代的精神,且通过科技来推进社会发展." />
         <title>形随意动 - 科技改变未来</title>
     </head>
-    <body>
+    <body class="has-navbar-top">
     
         <!--[if lt IE 9]>
             <div class="alert alert-warning flex" role="alert">
@@ -54,7 +54,7 @@
         <![endif]-->
         
         <!-- Header Start -->
-        <nav class="navbar-light navbar-expand-lg bg-light navbar " id="navbar">
+        <nav class="navbar-light navbar-expand-lg bg-light navbar fixed-top" id="navbar">
            <div class="container">
                 <a class="navbar-brand" href="#" style="margin-right: 3.5rem !important;">
                     <img class="d-inline-block align-top" src="https://www.interactiveplus.org/favicon.png"  width="32" height="32" alt="">
