--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 						}
 					)
 					.done(function(data, textStatus, jqXHR ){
-						//$(".footer").add(data);
+						$(".footer").add(data);
 					})
 					.fail(function(jqXHR, textStatus, errorThrown){
 						console.log("Footer failed to load: " + textStatus);
