--- a/members.html
+++ b/members.html
@@ -42,7 +42,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="keywords" content="形随意动, 形随意动介绍, 青少年编程, 团队, 开源" />
         <meta name="description" content="形随意动是求真, 务实的新纪元青少年编程团队. 形随意动致力于以符合时代的方法传递出领先于时代的精神. 形随意动是一个以云服务为核心的青少年编程兴趣组织, 专注于开源编程. 我们希望以以符合时代的方法传递出领先于时代的精神,且通过科技来推进社会发展." />
-        <title>形随意动 - 科技改变未来</title>
+        <title>形随意动 - 成员</title>
 	</head>
 	<body class="has-navbar-top">
         <!--[if lt IE 9]>
@@ -101,196 +101,26 @@
          <!-- Section Start -->
          <div class="section-member">
          	<div class="container">
-               <h1 class="section-text-tittle">成员</h1>
-               <h2 class="section-text-little-tittle">经历2次重组后, 形随意动团队变得更加精炼和有效率</h2>
-               <hr>
-               <div class="pt-5">
-               <div class="row">
-               	  <div class="col-sm-4 col-md-3">
-               	  	<div class="text-center section-two-item">
-               	  		<img src="https://www.interactiveplus.org/image/TX/1745500559.png" alt="" class="rounded-circle w-50">
-               	  		<div class="mt-3">
-               	  		<h3 class="member-name">老秋风</h3>
-               	  		<p class="member-intro">团队负责人</p>
-               	  		<p class="member-intro">PHP,VB,C++入门,Arduino,Linux运维</p>
-                        <div class="member-icon">
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-github fa-lg"></i>
-                        	</a>
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-qq fa-lg"></i>
-                            </a>
-                        </div>
-                        </div>
-               	  	</div>
-               	   </div>
-
-               	  <div class="col-sm-4 col-md-3">
-               	  	<div class="text-center section-two-item">
-               	  		<img src="https://www.interactiveplus.org/image/TX/2284938880.png" alt="" class="rounded-circle w-50">
-               	  		<div class="mt-3">
-               	  		<h3 class="member-name">Wey</h3>
-               	  		<p class="member-intro">副组长竞选人</p>
-               	  		<!-- 特殊的Padding，特殊的照顾 -->
-               	  		<p class="member-intro pb-4">VB, Arduino, C++, Idea</p>
-                        <div class="member-icon">
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-github fa-lg"></i>
-                        	</a>
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-qq fa-lg"></i>
-                            </a>
-                        </div>
-                        </div>
-               	  	</div>
-               	   </div>
-
-               	   <div class="col-sm-4 col-md-3">
-               	  	<div class="text-center section-two-item">
-               	  		<img src="https://www.interactiveplus.org/image/TX/1924286463.png" alt="" class="rounded-circle w-50">
-               	  		<div class="mt-3">
-               	  		<h3 class="member-name">沉默</h3>
-               	  		<p class="member-intro">活跃成员</p>
-               	  		<p class="member-intro">PHP入门, 前端入门, 51单片机入门, VB入门</p>
-                        <div class="member-icon">
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-github fa-lg"></i>
-                        	</a>
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-qq fa-lg"></i>
-                            </a>
-                        </div>
-                        </div>
-               	  	</div>
-               	   </div>
-
-
-               	   <div class="col-sm-4 col-md-3">
-               	  	<div class="text-center section-two-item">
-               	  		<img src="https://www.interactiveplus.org/image/TX/2529874419.png" alt="" class="rounded-circle w-50">
-               	  		<div class="mt-3">
-               	  		<h3 class="member-name">糖糖</h3>
-               	  		<p class="member-intro">活跃成员</p>
-               	  		<p class="member-intro">C#, VB, XAML, Arduino, 树莓派, Linux运维入门</p>
-                        <div class="member-icon">
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-github fa-lg"></i>
-                        	</a>
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-qq fa-lg"></i>
-                            </a>
-                        </div>
-                        </div>
-               	  	</div>
-               	   </div>
-
-
-               	   <div class="col-sm-4 col-md-3">
-               	  	<div class="text-center section-two-item">
-               	  		<img src="https://www.interactiveplus.org/image/TX/1473516113.png" alt="" class="rounded-circle w-50">
-               	  		<div class="mt-3">
-               	  		<h3 class="member-name">小小白</h3>
-               	  		<p class="member-intro">活跃成员</p>
-               	  		<!-- 特殊的Padding，特殊的照顾 -->
-               	  		<p class="member-intro pb-4">C++入门, 黑客技术入门</p>
-                        <div class="member-icon">
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-github fa-lg"></i>
-                        	</a>
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-qq fa-lg"></i>
-                            </a>
-                        </div>
-                        </div>
-               	  	</div>
-               	   </div>
-
- 
-                   
-               	   <div class="col-sm-4 col-md-3">
-               	  	<div class="text-center section-two-item">
-               	  		<img src="https://www.interactiveplus.org/image/TX/1156521060.png" alt="" class="rounded-circle w-50">
-               	  		<div class="mt-3">
-               	  		<h3 class="member-name">流星残影</h3>
-               	  		<p class="member-intro">活跃成员</p>
-               	  		<p class="member-intro pb-4">PHP, 前端, Linux运维</p>
-               	  		<!-- 特殊的Padding，特殊的照顾 -->
-                        <div class="member-icon">
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-github fa-lg"></i>
-                        	</a>
-                        	<a href="" class="text-dark ml-1">
-                        		<i class="fa fa-qq fa-lg"></i>
-                            </a>
-                        </div>
-                        </div>
-               	  	</div>
-               	   </div>
-
-
-               </div>
+                <h1 class="section-text-tittle">成员</h1>
+                <h2 class="section-text-little-tittle">经历2次重组后, 形随意动团队变得更加精炼和有效率</h2>
+                <hr />
+                    <div class="row" id="MemberDisplayRow">
+                            <script src="dynamicData/members.js"></script>
+                            <script src="js/memberDynamicDisplay.js"></script>
+                            <script>
+                                $(document).ready(function(){
+                                    dynamicDisplayMembers("#MemberDisplayRow","cn");
+                                })
+                            </script>
+                    </div>
+                </div>
             </div>
-           </div>
          </div>
         <!-- Footer Start -->
 		<div class="footer">
-            <div class="container-fluid bg-light">
-                <div class="row d-flex justify-content-center footer-text">
-                    <div class="col-md-3">
-                        <ul class="">
-                            <p class="section-item-in-text">友情链接</p>
-                            <li class="pt-2">
-                               <a href="" class="text-dark">A风工作室</a>
-                            </li>
-                            <li class="pt-2">
-                                <a href="" class="text-dark">Lanza,Inc</a>
-                            </li>
-                            <li class="pt-2">
-                                <a href="" class="text-dark">BlueAirHost</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <ul>
-                           <p class="section-item-in-text">主要服务</p>
-                           <li class="pt-2">
-                               <a href="" class="text-dark">BlueAirHost</a>
-                           </li> 
-                           <li class="pt-2">
-                               <a href="" class="text-dark">微信公众号</a>
-                           </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <ul>
-                            <p class="section-item-in-text">实用链接</p>
-                            <li class="pt-2">
-                                <a href="" class="text-dark">关于我们</a>
-                            </li>
-                            <li class="pt-2">
-                                <a href="" class="text-dark">合作</a>
-                            </li>
-                            <li class="pt-2">
-                                <a href="" class="text-dark">成员</a>
-                            </li>
-                            <li class="pt-2">
-                                <a href="" class="text-dark">开源</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <hr class="w-75">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-sm-2">
-                        <span class="text-center" >Powered by 形随意动</span>
-                    </div>
-                    <div class="col-sm-2">
-                        <span class="text-center">&copy; 2013-2018</span>
-                    </div>
-                    <div class="col-sm-2">All Rights Reserved</div>
-                </div>
-            </div>
+            <script>
+                prependSelectorWithRemoteContent(".footer","common_footer.html");
+            </script>
         </div>
     	<!-- Footer End -->
 	</body>
