--- a/common_footer.html
+++ b/common_footer.html
@@ -46,12 +46,12 @@
 
     <hr class="w-75">
     <div class="row d-flex justify-content-center">
-        <div class="col-sm-4">
+        <div class="col-md-6">
             <span class="text-left" >Powered by 形随意动 &copy; 2013-2018</span>
         </div>
         <!-- div class="col-sm-2">
             <span class="text-center"></span>
         </div -->
-        <div class="col-sm-2">All Rights Reserved</div>
+        <div class="col-md-3 text-md-right">All Rights Reserved</div>
     </div>
 </div>
