--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="section-text" id="section">
             <div class="container">
                 <div class="section-one">
-                    <h1 class="text-center section-text-tittle">技术驾驭创新, 数字驱动转型</h1>
+                    <h1 class="text-center section-text-tittle">技术驾驭<span class="text-primary">创新</span>, 数字驱动<span class="text-primary">转型</span></h1>
                     <h2 class="text-center section-text-little-tittle">传统的商业模式正在被新技术所颠覆，同时又以一种全新的模式融合再创新</h2>
                     <div class="row mt-5" >
                         <div class="col-xs-4 col-md-6 pr-0" >
@@ -152,9 +152,9 @@
                 </div>
         
                 <div class="section-two">
-                    <h1 class="text-center section-text-tittle">简化编程难度, 推动创新力量</h1>
+                    <h1 class="text-center section-text-tittle"><span class="text-primary">简化</span>编程难度, 推动<span class="text-primary">创新</span>力量</h1>
                     <h2 class="text-center section-text-little-tittle">形随意动致力于实践跨平台应用编写, 开发了包括EasyCrossPlatform, BoostPHP等简化程序开发的框架</h2>
-                    <h2 class="text-center section-text-little-tittle">让开发到部署的每个流程简单易用</h2>
+                    <h2 class="text-center section-text-little-tittle"><span style="color:chocolate">形随意动</span>让开发到部署的每个流程简单易用</h2>
                     <div class="row section-text-block d-flex justify-content-center ml-3">
                         <div class="card col-md-3 col-xs-4 section-two-item bg-light rounded">
                             <div class="card-img-top d-flex justify-content-center mt-5 ">
