--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
         <!-- Section Text Start -->
         <div class="section-text" id="section">
             <div class="container">
+
+                 <!-- Load News Block -->
+                <script type="text/javascript"> prependSelectorWithRemoteContent('.section-text .container','newsdisplay.html'); </script>
+
+
                 <div class="section-one">
                     <h1 class="text-center section-text-tittle">技术驾驭<span class="text-primary">创新</span>, 数字驱动<span class="text-primary">转型</span></h1>
                     <h2 class="text-center section-text-little-tittle">传统的商业模式正在被新技术所颠覆，同时又以一种全新的模式融合再创新</h2>
