--- a/newsdisplay.html
+++ b/newsdisplay.html
@@ -1,18 +1,18 @@
-<div class="section-news">
+<div class="section-news bg-light">
 	<h1 class="text-center section-text-tittle">新闻动态</h1>
 	<div class="row">
 		<div class="col-md-3">
             <ul >
             	<li class="pt-2">
-            		<i class="fa fa-arrow-right fa-1 pull-left pr-2"></i>
+            		<i class="fa fa-arrow-right fa-1 pull-left pr-2 font-weight-light"></i>
             		<a href="" class="section-news-text">WPA3认证正式推出</a>
             	</li>
             	<li class="pt-2">
-            		<i class="fa fa-arrow-right fa-1 pull-left pr-2"></i>
+            		<i class="fa fa-arrow-right fa-1 pull-left pr-2 font-weight-light"></i>
             		<a href="" class="section-news-text">WPA3认证正式推出</a>
             	</li>
             	<li class="pt-2">
-            		<i class="fa fa-arrow-right fa-1 pull-left pr-2"></i>
+            		<i class="fa fa-arrow-right fa-1 pull-left pr-2 font-weight-light"></i>
             		<a href="" class="section-news-text">WPA3认证正式推出</a>
             	</li>
             </ul>
