--- a/newsdisplay.html
+++ b/newsdisplay.html
@@ -1,24 +1,45 @@
-<div class="section-news bg-light">
+<div class="section-news">
 	<h1 class="text-center section-text-tittle">新闻动态</h1>
 	<div class="row">
 		<div class="col-md-3">
-            <ul >
+            <ul class="section-news-ul">
             	<li class="pt-2">
-            		<i class="fa fa-arrow-right fa-1 pull-left pr-2 font-weight-light"></i>
+            		<i class="fa fa-angle-right pr-2"></i>
             		<a href="" class="section-news-text">WPA3认证正式推出</a>
             	</li>
             	<li class="pt-2">
-            		<i class="fa fa-arrow-right fa-1 pull-left pr-2 font-weight-light"></i>
-            		<a href="" class="section-news-text">WPA3认证正式推出</a>
+                    <i class="fa fa-angle-right pr-2"></i>
+            		<a href="" class="section-news-text">2020年，我们将会在云上使用Windows</a>
             	</li>
             	<li class="pt-2">
-            		<i class="fa fa-arrow-right fa-1 pull-left pr-2 font-weight-light"></i>
-            		<a href="" class="section-news-text">WPA3认证正式推出</a>
+            		<i class="fa fa-angle-right pr-2"></i>
+            		<a href="" class="section-news-text">云上贵州第一天，苹果iCloud用户信息被入侵</a>
+            	</li>
+            	<li class="pt-2">
+            		<i class="fa fa-angle-right pr-2"></i>
+            		<a href="" class="section-news-text">Docker简要介绍</a>
             	</li>
             </ul>
 		</div>
 		<div class="col-md-3">
-			
+			<ul class="section-news-ul">
+            	<li class="pt-2">
+            		<i class="fa fa-angle-right pr-2"></i>
+            		<a href="" class="section-news-text">WPA3认证正式推出</a>
+            	</li>
+            	<li class="pt-2">
+                    <i class="fa fa-angle-right pr-2"></i>
+            		<a href="" class="section-news-text">2020年，我们将会在云上使用Windows</a>
+            	</li>
+            	<li class="pt-2">
+            		<i class="fa fa-angle-right pr-2"></i>
+            		<a href="" class="section-news-text">云上贵州第一天，苹果iCloud用户信息被入侵</a>
+            	</li>
+            	<li class="pt-2">
+            		<i class="fa fa-angle-right pr-2"></i>
+            		<a href="" class="section-news-text">Docker简要介绍</a>
+            	</li>
+            </ul>
 		</div>
 	</div>
 </div>
