--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                  <div class="collapse navbar-collapse" id="nav-collapse">
                     <ul class="navbar-nav mr-auto">
                        <li class="nav-item">
-                         <a class="nav-link nav-text" href="#" >团队介绍</a>
+                         <a class="nav-link nav-text" href="team.html" >团队介绍</a>
                        </li>
                        <li class="nav-item ">
-                          <a class="nav-link nav-text" href="#" >成员</a>
+                          <a class="nav-link nav-text" href="members.html" >成员</a>
                        </li>
                        <li class="nav-item">
                         <a class="nav-link nav-text" href="#">合作</a>
@@ -135,8 +135,7 @@
         <div class="section-text" id="section">
             <div class="container">
 
-                 <!-- Load News Block -->
-                <script type="text/javascript"> prependSelectorWithRemoteContent('.section-text .container','newsdisplay.html'); </script>
+               
 
 
                 <div class="section-one">
@@ -185,8 +184,11 @@
                                 <h3 class="card-text text-center section-item-in-text">BoostPHP</h3>
                             </div>
                        </div>
-                  </div>
+                    </div>
                 </div>
+                 <!-- Load News Block -->
+                <script type="text/javascript"> prependSelectorWithRemoteContent('.section-text .container','newsdisplay.html'); </script>
+                
             </div>
         </div>
         <!-- Section Text End -->
