--- a/members.html
+++ b/members.html
@@ -60,7 +60,7 @@
         <!-- Header Start -->
         <nav class="navbar-light navbar-expand-lg bg-light navbar fixed-top" id="navbar">
            <div class="container">
-                <a class="navbar-brand" href="#" style="margin-right: 3.5rem !important;">
+                <a class="navbar-brand mr-2" href="index.html" >
                     <img class="d-inline-block align-top" src="https://www.interactiveplus.org/favicon.png"  width="32" height="32" alt="">
                     <span>形随意动</span>
                 </a>
