NewsDisplay, Team Introduction, Navbar Fix

--- a/members.html
+++ b/members.html
@@ -44,7 +44,7 @@
         <meta name="description" content="形随意动是求真, 务实的新纪元青少年编程团队. 形随意动致力于以符合时代的方法传递出领先于时代的精神. 形随意动是一个以云服务为核心的青少年编程兴趣组织, 专注于开源编程. 我们希望以以符合时代的方法传递出领先于时代的精神,且通过科技来推进社会发展." />
         <title>形随意动 - 成员</title>
 	</head>
-	<body class="has-navbar-top">
+	<body>
         <!--[if lt IE 9]>
             <div class="alert alert-warning flex" role="alert">
           你的浏览器太久了，请升级再访问本网站 
@@ -58,9 +58,9 @@
 
 
         <!-- Header Start -->
-        <nav class="navbar-light navbar-expand-lg bg-light navbar fixed-top" id="navbar">
+        <nav class="navbar navbar-light navbar-expand-lg bg-light navbar" id="navbar">
            <div class="container">
-                <a class="navbar-brand " href="index.html" style="margin-right: 3.5rem !important;">
+                <a class="navbar-brand mr-3" href="#">
                     <img class="d-inline-block align-top" src="https://www.interactiveplus.org/favicon.png"  width="32" height="32" alt="">
                     <span>形随意动</span>
                 </a>
@@ -76,14 +76,14 @@
                        <li class="nav-item">
                          <a class="nav-link nav-text" href="#" >团队介绍</a>
                        </li>
-                       <li class="nav-item ">
-                          <a class="nav-link nav-text" href="#" >成员</a>
+                       <li class="nav-item active">
+                          <a class="nav-link nav-text" href="#">成员</a>
                        </li>
                        <li class="nav-item">
                         <a class="nav-link nav-text" href="#">合作</a>
                        </li>
                        <li class="nav-item">
-                         <a class="nav-link nav-text" href="https://github.com/InteractivePlus/">开源</a>
+                         <a class="nav-link nav-text" href="https://github.com/InteractivePlus/" target="_blank">开源</a>
                        </li>
                     </ul>
                     <span class="navbar-text dropdown " >
