--- a/members.html
+++ b/members.html
@@ -60,7 +60,7 @@
         <!-- Header Start -->
         <nav class="navbar navbar-light navbar-expand-lg bg-light navbar" id="navbar">
            <div class="container">
-                <a class="navbar-brand mr-3" href="#">
+                <a class="navbar-brand mr-3" href="index.html">
                     <img class="d-inline-block align-top" src="https://www.interactiveplus.org/favicon.png"  width="32" height="32" alt="">
                     <span>形随意动</span>
                 </a>
@@ -74,13 +74,13 @@
                  <div class="collapse navbar-collapse" id="nav-collapse">
                     <ul class="navbar-nav mr-auto">
                        <li class="nav-item">
-                         <a class="nav-link nav-text" href="#" >团队介绍</a>
+                         <a class="nav-link nav-text" href="team.html" >团队介绍</a>
                        </li>
                        <li class="nav-item active">
-                          <a class="nav-link nav-text" href="#">成员</a>
+                          <a class="nav-link nav-text" href="javascript:void(0);">成员</a>
                        </li>
                        <li class="nav-item">
-                        <a class="nav-link nav-text" href="#">合作</a>
+                        <a class="nav-link nav-text" href="cooperation.html">合作</a>
                        </li>
                        <li class="nav-item">
                          <a class="nav-link nav-text" href="https://github.com/InteractivePlus/" target="_blank">开源</a>
