Update Footer, Add Cooperation Page

--- a/members.html
+++ b/members.html
@@ -98,8 +98,8 @@
         </nav>
         <!-- Header End -->
         
-         <!-- Section Start -->
-         <div class="section-member">
+        <!-- Section Start -->
+        <div class="section-member">
          	<div class="container">
                 <h1 class="section-text-tittle">成员</h1>
                 <h2 class="section-text-little-tittle">经历2次重组后, 形随意动团队变得更加精炼和有效率</h2>
@@ -115,7 +115,8 @@
                     </div>
                 </div>
             </div>
-         </div>
+        </div>
+        <!-- Section End -->
         <!-- Footer Start -->
 		<div class="footer">
             <script>
