Fix Cooperation Navigation Bar

--- a/cooperation.html
+++ b/cooperation.html
@@ -78,7 +78,7 @@
                        <li class="nav-item">
                           <a class="nav-link nav-text" href="members.html" >成员</a>
                        </li>
-                       <li class="nav-item">
+                       <li class="nav-item active">
                         <a class="nav-link nav-text" href="javascript:void(0);">合作</a>
                        </li>
                        <li class="nav-item">
