--- a/common_footer.html
+++ b/common_footer.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bg-light">
     <div class="row d-flex justify-content-center footer-text">
         <div class="col-md-3">
-            <ul class="">
+            <ul class="footer-list">
                 <p class="section-item-in-text">友情链接</p>
                 <li class="pt-2">
                    <a href="http://www.afengteam.win/" class="text-dark">A风工作室</a>
@@ -12,7 +12,7 @@
             </ul>
         </div>
         <div class="col-md-3">
-            <ul>
+            <ul class="footer-list">
                <p class="section-item-in-text">主要服务</p>
                <li class="pt-2">
                    <a href="http://cn.blueairhost.xyz/" class="text-dark">BlueAirHost</a>
@@ -23,7 +23,7 @@
             </ul>
         </div>
         <div class="col-md-3">
-            <ul>
+            <ul class="footer-list">
                 <p class="section-item-in-text">联系方式</p>
                 <li class="pt-2">
                     publicservice[AT]xsydsoft.com
