--- a/members.html
+++ b/members.html
@@ -106,7 +106,7 @@
                 <hr />
                     <div class="row" id="MemberDisplayRow">
                             <script src="dynamicData/members.js"></script>
-                            <script src="js/memberDynamicDisplay.js"></script>
+                            <script src="js/memberDynamicDisplay.js" async></script>
                             <script>
                                 $(document).ready(function(){
                                     dynamicDisplayMembers("#MemberDisplayRow","cn");
