--- a/newsdisplay.html
+++ b/newsdisplay.html
@@ -149,7 +149,7 @@
 				</div>
 				<script src="dynamicData/members.js"></script>
 				<script src="dynamicData/newsList.js"></script>
-				<script src="js/newsDisplayLoading.js"></script>
+				<script src="js/newsDisplayLoading.js" async></script>
 				<script>
 					$(document).ready(function(){
 						var ArticleStillLoading = true;
