--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- Header Start -->
         <nav class="navbar navbar-light navbar-expand-lg bg-light" id="navbar">
            <div class="container">
-                <a class="navbar-brand mr-3" href="javascript:void(0);">
+                <a class="navbar-brand" href="javascript:void(0);" style="margin-right: 3.5rem !important;">
                     <img class="d-inline-block align-top" src="static/favicon.png"  width="32" height="32" alt="">
                     <span>形随意动</span>
                 </a>
@@ -119,7 +119,7 @@
         <div class="swiper-container" id="banner">
             <div class="swiper-wrapper" id="swipeContentHolder">
                <script src="dynamicData/indexslides.js"></script>
-               <script src="js/homePageSlidesLoad.js" async></script>
+               <script src="js/homePageSlidesLoad.js"></script>
                <script>
                     $(document).ready(function(){
                         loadIndexSlides("#swipeContentHolder","cn");
@@ -156,7 +156,7 @@
 
                     </div>
                     <script src="dynamicData/newsList.js"></script>
-                    <script src="js/homePageNewsListDisplay.js" async></script>
+                    <script src="js/homePageNewsListDisplay.js"></script>
                     <script>
                         $(document).ready(function(){
                             loadSelectorsWithNews("#NewsBox",["#NewsUL1","#NewsUL2","#NewsUL3","#NewsUL4"],"cn",20);
