--- a/newsdisplay.html
+++ b/newsdisplay.html
@@ -136,12 +136,14 @@
 			<!-- News Content Area Start -->
 			<div class="container-fluid newsdisplay-newscontent" id="NewsDisplayBox">
 				<div class="row">
-					<div class="col-md-9" id="NewsContentBox">
+					<div class="" id="NewsContentBox">
 
 					</div>
+                    <!--
 					<div class="col-md-3" id="NewsAuthorBox">
 
 					</div>
+                    -->
 				</div>
 				<div class="container-fluid newsdisplay-news404box" style="display:none" id="NewsContent404Box">
 					<p class="lead text-center">错误发生了!</p>
