--- a/team.html
+++ b/team.html
@@ -99,17 +99,15 @@
 		<!-- Header End -->
 
         <!-- News Area Start -->
-		<div class="container" id="NewsDisplayOutsideBox">
-			<!-- News Content Area Start -->
-			<div class="container-fluid newsdisplay-newscontent" id="NewsDisplayBox">
-				<div class="row">
-					<div class="col-md-9" id="NewsContentBox">
+		<div class="container" id="IntroDisplayOutsideBox">
+            <!-- News Content Area Start -->
+            <div class="container-fluid newsdisplay-newscontent intro-start" id="IntroDisplayBox">
+                <div class="row">
+                    <div class="mb-5" id="IntroContentBox">
 
-					</div>
-					<div class="col-md-3" id="NewsAuthorBox">
-
-					</div>
+                    </div>
 				</div>
+            </div>
 				<div class="container-fluid" style="display:none" id="NewsContent404Box">
 					<p class="lead text-center">错误发生了!</p>
 					<p class="text-center">在读取您的文章时发生了一个错误, 可能是因为ArticleID错误导致的, 请检查后联系网站管理员.</p>
