--- a/team.html
+++ b/team.html
@@ -99,33 +99,43 @@
 		<!-- Header End -->
 
         <!-- News Area Start -->
-		<div class="container" id="NewsDisplayOutsideBox">
-			<!-- News Content Area Start -->
-			<div class="container-fluid newsdisplay-newscontent" id="NewsDisplayBox">
-				<div class="row">
-					<div class="col-md-9" id="NewsContentBox">
+		<div class="container" id="IntroDisplayOutsideBox">
+            <!-- News Content Area Start -->
+            <div class="container-fluid newsdisplay-newscontent intro-start" id="IntroDisplayBox">
+                <div class="row">
+                    <div class="mb-5" id="IntroContentBox">
 
-					</div>
-					<div class="col-md-3" id="NewsAuthorBox">
-
-					</div>
+                    </div>
 				</div>
+            </div>
 				<div class="container-fluid" style="display:none" id="NewsContent404Box">
 					<p class="lead text-center">错误发生了!</p>
 					<p class="text-center">在读取您的文章时发生了一个错误, 可能是因为ArticleID错误导致的, 请检查后联系网站管理员.</p>
 				</div>
-				<script src="dynamicData/members.js"></script>
-				<script src="dynamicData/newsList.js"></script>
-				<script src="js/newsDisplayLoading.js"></script>
-				<script>
-					$(document).ready(function(){
-						var ArticleStillLoading = true;
-						var articleID = 0;
-						if(ArticleStillLoading){
-							var ArticleSuccessfulLoaded = LoadArticle("#NewsContentBox","#NewsAuthorBox",articleID,"cn")
-						}
-					});
-				</script>
+				<div class="container-fluid newsdisplay-news404box" style="display:none" id="IntroContent404Box">
+                    <p class="lead text-center">错误发生了!</p>
+                    <p class="text-center">在读取您的文章时发生了一个错误, 可能是因为ArticleID错误导致的, 请检查后联系网站管理员.</p>
+                </div>
+                <script src="dynamicData/members.js"></script>
+                <script src="dynamicData/newsList.js"></script>
+                <script src="js/newsDisplayLoading.js"></script>
+                <script>
+                    $(document).ready(function(){
+                        var ArticleStillLoading = true;
+                        var articleIDString = getGETParam("id");
+                        if(articleIDString === null || articleIDString === undefined){
+                            $("#IntroContent404Box").show();
+                            ArticleStillLoading = false;
+                        }
+                        var articleID = parseInt(articleIDString);
+                        if(ArticleStillLoading){
+                            var ArticleSuccessfulLoaded = LoadArticle("#IntroContentBox","#IntroAuthorBox",articleID,"cn")
+                            if(!ArticleSuccessfulLoaded){
+                                $("#IntroContent404Box").show();
+                            }
+                        }
+                    });
+                </script>
 			</div>
 			<!-- News Content Area End -->
 		</div>
