--- a/members.html
+++ b/members.html
@@ -60,7 +60,7 @@
         <!-- Header Start -->
         <nav class="navbar navbar-light navbar-expand-lg bg-light navbar" id="navbar">
            <div class="container">
-                <a class="navbar-brand mr-3" href="index.html">
+                <a class="navbar-brand" href="index.html"  style="margin-right: 3.5rem !important;">
                     <img class="d-inline-block align-top" src="https://www.interactiveplus.org/favicon.png"  width="32" height="32" alt="">
                     <span>形随意动</span>
                 </a>
