--- a/cooperation.html
+++ b/cooperation.html
@@ -59,7 +59,7 @@
         <!-- Header Start -->
         <nav class="navbar navbar-light navbar-expand-lg bg-light" id="navbar">
            <div class="container">
-                <a class="navbar-brand" href="index.html" style="margin-right: 3.5rem !important;">
+                <a class="navbar-brand mr-4" href="index.html">
                     <img class="d-inline-block align-top" src="static/favicon.png"  width="32" height="32" alt="">
                     <span>形随意动</span>
                 </a>
