--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                        </li>
                     </ul>
                     <span class="navbar-text dropdown " >
-                        <button class="btn btn-outline-primary dropdown-toggle" id="ChooseLanguage" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">语言</button>
+                        <button class="btn btn-outline-primary dropdown-toggle" id="ChooseLanguage" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language</button>
                         <div class="dropdown-menu" aria-labelledby="ChooseLanguage" id="LoadLanguaage">
                             <a class="dropdown-item" id="LangSelection_Chinese" href="#">简体中文</a>
                             <a class="dropdown-item" id="LangSelection_English" href="#">English</a>
