--- a/members.html
+++ b/members.html
@@ -86,8 +86,8 @@
                          <a class="nav-link nav-text" href="https://github.com/InteractivePlus/" target="_blank">开源</a>
                        </li>
                     </ul>
-                    <span class="navbar-text dropdown " >
-                        <button class="btn btn-outline-primary dropdown-toggle" id="ChooseLanguage" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">语言</button>
+                    <span class="navbar-text dropdown" >
+                        <button class="btn btn-outline-primary dropdown-toggle" id="ChooseLanguage" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language</button>
                         <div class="dropdown-menu" aria-labelledby="ChooseLanguage" id="LoadLanguaage">
                             <a class="dropdown-item" id="LangSelection_Chinese" href="#">简体中文</a>
                             <a class="dropdown-item" id="LangSelection_English" href="#">English</a>
