Fix News List Dislay in newsdisplay.html

--- a/newsdisplay.html
+++ b/newsdisplay.html
@@ -103,7 +103,7 @@
 		<div class="container-fluid bg-info" id="NewsTitleBox" style="overflow:hidden">
 			<div class="container">
 				<!-- PC/Tablet Display Start -->
-				<div class="row d-none d-md-block">
+				<div class="row d-none d-md-flex">
 					<div class="col-md-6">
 						<h1>新闻中心</h1>
 						<p>在这里, 了解关于互联网的一点一滴</p>
@@ -117,7 +117,7 @@
 						<script src="js/homePageNewsListDisplay.js"></script>
 						<script>
 							$(document).ready(function(){
-								loadSelectorsWithNews("#NewsListBox",["#NewsUL1"],"cn",5);
+								loadSelectorsWithNews("#NewsListBox",["#NewsUL1"],"cn",2);
 							});
 						</script>
 					</div>
