--- a/cn/common_footer.html
+++ b/cn/common_footer.html
@@ -56,7 +56,7 @@
           </button>
         </div>
         <div class="modal-body text-center">
-            <img src="static/wechatQR.jpg" class="w-50" />
+            <img src="../static/wechatQR.jpg" class="w-50" />
             <p>扫码关注, 或搜索微信公众号 形随意动</p>
         </div>
         <div class="modal-footer">
