Fix Language Jumping Bug

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         redirectURLTo("en");
                     }
                 }else{
-                    redirectURLTo("jumpLang");
+                    redirectURLTo(jumpLang);
                 }
             });
         </script>
