Add Language Href

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <!-- Declaring Language -->
+        <link rel="alternate" hreflang="zh" href="https://www.interactiveplus.org/cn/" />
+        <link rel="alternate" hreflang="en" href="https://www.interactiveplus.org/en/" />
+        <!-- Finish Declaring Language -->
+
         <!-- Delcaring Important Preload JS Files -->
         <link rel="preload" as="script" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" />
         <!-- Finish Declaring Preload JS Files -->
@@ -16,9 +21,9 @@
         
         <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="keywords" content="形随意动, 形随意动介绍, 青少年编程, 团队, 开源" />
-        <meta name="description" content="形随意动是求真, 务实的新纪元青少年编程团队. 形随意动致力于以符合时代的方法传递出领先于时代的精神. 形随意动是一个以云服务为核心的青少年编程兴趣组织, 专注于开源编程. 我们希望以以符合时代的方法传递出领先于时代的精神,且通过科技来推进社会发展." />
-        <title>形随意动 - 科技改变未来</title>
+        <meta name="keywords" content="Interactive+, InteractivePlus, InteractivePlus Introduction, STEM, Teenager Programming, Team, Open-Source" />
+        <meta name="description" content="InteractivePlus is a teenager coding group that focus on open-source, and make our world better by the push of technologies. Interactive+ will continue to organize with determination, act with passion, treat others with respect, intergrity and honesty." />
+        <title>InteractivePlus - Home Page</title>
     </head>
     <body>
         <script>
