--- a/cn/index.html
+++ b/cn/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
     <head>
         <meta charset="UTF-8">
-        
+        <!-- Declaring Language Alternatives -->
+        <link rel="alternate" hreflang="x-default" href="https://www.interactiveplus.org/" />
+        <link rel="alternate" hreflang="en" href="https://www.interactiveplus.org/en/index.html" />
+        <!-- Finish Declaring Language Alternatives -->
+
         <!-- Declaring Important Preload CSS Files -->
         <link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/css/swiper.min.css">
         <link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css">
