--- a/cn/newsdisplay.html
+++ b/cn/newsdisplay.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
     <head>
         <meta charset="UTF-8">
         
+        <!-- Cannot Declare Language Alternatives because NewsID is dynamic -->
+        <link rel="alternate" hreflang="x-default" href="https://www.interactiveplus.org/" />
+        <!-- Finish Declaring Language Alternatives -->
+
         <!-- Declaring Important Preload CSS Files -->
         <link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css">
         <link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
